fix: correct the layout issues for popup and inline search results in theme v1

--- a/src/v1/ChannelSearch.scss
+++ b/src/v1/ChannelSearch.scss
@@ -3,12 +3,13 @@
 
   padding: var(--md-p) var(--md-p) 0;
   display: flex;
+  flex-direction: column;
   align-items: center;
   position: relative;
   background: var(--grey-gainsboro);
 
   input {
-    flex: 1;
+    width: 100%;
     background: var(--grey-whisper);
     border: 1px solid transparent;
     outline: none;
@@ -31,9 +32,7 @@
   }
 
   &-container {
-    position: absolute;
-    width: 300px;
-    z-index: 2;
+
     padding: 8px;
 
     &-searching {
@@ -69,7 +68,10 @@
   &-container.popup {
     border-radius: var(--border-radius-md);
     background: var(--white-smoke);
+    position: absolute;
+    z-index: 2;
     left: 0;
+    right: 0;
     top: calc(var(--channel-search-input-height) + 40px);
     box-shadow: 0 7px 9px 0 var(--border), 0 1px 0 0 var(--border);
     border: 1px solid var(--border);
@@ -86,10 +88,8 @@
   }
 
   &-container.inline {
-    top: 64px;
-    right: 0;
+    width: 100%;
     background: var(--grey-gainsboro);
-    height: calc(100vh - 60px);
 
     .str-chat__channel-search-result {
       &:hover {
